just testing to make sure data is passing through

--- a/server/views/champion.hbs
+++ b/server/views/champion.hbs
@@ -6,7 +6,11 @@
 </head>
 <body>
 
-  <h1>{{forTemplate.before.CHAMP_NAME}} Data</h1>
+  <h1>{{forTemplate.CHAMP_NAME}} Data</h1>
+  <h1>{{forTemplate.winPercentageBefore}} Data</h1>
+  <h1>{{forTemplate.winPercentageAfter}} Data</h1>
+  <h1>{{forTemplate.winPercentageChange}} Data</h1>
+  <h1>{{forTemplate.itemPercentageChange}} Data</h1>
 
 </body>
 </html>
