--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link href="../styles/styles.css" rel="stylesheet" type="text/css">
   <title>Effects of AP Item Changes</title>
 </head>
 <body>
@@ -9,13 +11,24 @@
   <h1>Effects of AP Item Changes</h1>
 
   
-  {{#each champions as |Champion|}}
-  <div>
-    <a href="/{{Champion.CHAMP_NAME}}"><img src="http://ddragon.leagueoflegends.com/cdn/5.2.1/img/champion/{{Champion.forImage}}.png" alt="Image not found" onError="this.onerror=null;this.src='http://ddragon.leagueoflegends.com/cdn/5.2.1/img/profileicon/588.png';"></a>
-    <!-- <img src="http://ddragon.leagueoflegends.com/cdn/5.2.1/img/champion/RekSai.png" alt=""> -->
-    <!-- <img src="{{Champion.Championname}}_sm.jpg" alt=""> -->
-    <a href="/{{Champion.CHAMP_NAME}}">{{Champion.CHAMP_NAME}}</a>
-    {{/each}}
+
+  <div class="row">
+    <div class="col-md-1"></div>
+    <div class="row col-md-10">
+      {{#each champions as |Champion|}}
+      <div class="col-md-2 each-box">
+        <div>
+        <a href="/{{Champion.CHAMP_NAME}}"><img src="http://ddragon.leagueoflegends.com/cdn/5.2.1/img/champion/{{Champion.forImage}}.png" alt="Image not found" onError="this.onerror=null;this.src='http://img2.wikia.nocookie.net/__cb20150220161905/leagueoflegends/images/thumb/1/1b/Urf_Poro_Icon.png/120px-Urf_Poro_Icon.png';"></a>   
+        </div>
+        <div>
+          <a href="/{{Champion.CHAMP_NAME}}">{{Champion.CHAMP_NAME}}</a>
+        </div>
+      
+      </div>
+      {{/each}}
+    </div>
+    
+    <div class="col-md-1"></div>
   </div>
 
 </body>
