adds /champs/ routing to handle empty landing route

--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -18,10 +18,10 @@
       {{#each champions as |Champion|}}
       <div class="col-md-2 each-box">
         <div>
-        <a href="/{{Champion.CHAMP_NAME}}"><img src="http://ddragon.leagueoflegends.com/cdn/5.2.1/img/champion/{{Champion.forImage}}.png" alt="Image not found" onError="this.onerror=null;this.src='http://img2.wikia.nocookie.net/__cb20150220161905/leagueoflegends/images/thumb/1/1b/Urf_Poro_Icon.png/120px-Urf_Poro_Icon.png';"></a>   
+        <a href="/champ/{{Champion.CHAMP_NAME}}"><img src="http://ddragon.leagueoflegends.com/cdn/5.2.1/img/champion/{{Champion.forImage}}.png" alt="Image not found" onError="this.onerror=null;this.src='http://img2.wikia.nocookie.net/__cb20150220161905/leagueoflegends/images/thumb/1/1b/Urf_Poro_Icon.png/120px-Urf_Poro_Icon.png';"></a>   
         </div>
         <div>
-          <a href="/{{Champion.CHAMP_NAME}}">{{Champion.CHAMP_NAME}}</a>
+          <a href="/champ/{{Champion.CHAMP_NAME}}">{{Champion.CHAMP_NAME}}</a>
         </div>
       
       </div>
