--- a/server/styles/styles.css
+++ b/server/styles/styles.css
@@ -3,10 +3,9 @@
 }
 
 .each-box {
-    /*background-color: transparent;
-    background-image: linear-gradient(to bottom, rgba(30, 87, 153, 0.2) 0%, rgba(125, 185, 232, 0) 100%);
-    background-repeat: repeat;
-    border-radius:10px;*/
     padding: 50px;
-    /*margin: 10px, 40px, 10px, 10px;*/
+}
+
+.test {
+  color: orange;
 }
