makes styling changes to views files

--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -8,7 +8,28 @@
 </head>
 <body>
 
-  <h1>Effects of AP Item Changes</h1>
+  <div style="margin-top:50px">
+    <h1 style="text-align:center">Effects of AP Item Changes</h1>
+  </div>
+
+  <div class="row" height="100px" style="display:block">
+    <div style="margin-left:75px;margin-right:75px;margin-top:50px;margin-bottom:150px">
+      <h3>Project made for Riot Games' API Challenge</h3>
+      <p>
+        In patch 5.13, Riot introdued a flurry of changes across the ability power items. You can read about the changes <a href='http://na.leagueoflegends.com/en/news/game-updates/patch/patch-513-notes#patch-ability-power-itemization'>here</a>. How exactly did these changes affect your favorite champions? What's the new meta item for your playstyle? Click any of the champs below to find out!
+      </p>
+      <p>
+        This data is pulled from approximately 60,000 ranked matches played in the NA, KR, and EUW regions; half from patch 5.11, and the other half from 5.14. 
+      </p>
+      <p>
+        I built this as a challenge for Riot Games' API Challenge 2.0. You can view the source code on my <a href="https://github.com/territorialFerry/riotAPIChallenge">GitHub</a>. Fork it over if you'd like to contribute! If you have any questions/comments, or if you're curious about other game data, contact me <a href="https://github.com/vokoshyv">here</a>. 
+      </p>
+      <p>
+        Thanks for checking it out!!
+      </p>
+
+    </div>
+  </div>
 
   
 
