adds title to styling

--- a/server/views/champion.hbs
+++ b/server/views/champion.hbs
@@ -9,6 +9,7 @@
   
   <div style="margin-top:50px;margin-bottom:50px">
     <h1 style="text-align:center">{{forTemplate.CHAMP_NAME}} Data</h1>
+    <h3>{{forTemplate.before.TITLE}}</h3>
   </div>
 
   <div class="row">
