adds some styling to champion.hbs file

--- a/server/views/champion.hbs
+++ b/server/views/champion.hbs
@@ -8,8 +8,8 @@
 <body>
   
   <div style="margin-top:50px;margin-bottom:50px">
-    <h1 style="text-align:center">{{forTemplate.CHAMP_NAME}} Data</h1>
-    <h3>{{forTemplate.before.TITLE}}</h3>
+    <h1 style="text-align:center">{{forTemplate.CHAMP_NAME}}</h1>
+    <h3 style="text-align:center">{{forTemplate.before.TITLE}}</h3>
   </div>
 
   <div class="row">
