adds percentage points to champion.hbs file

--- a/server/views/champion.hbs
+++ b/server/views/champion.hbs
@@ -17,8 +17,8 @@
     <div class="col-md-1"></div>
 
     <div class="col-md-5">
-      <h3 style="text-align:center">Win Percentage Before Patch: {{forTemplate.winPercentageBefore}}</h3>
-      <h3 style="text-align:center">Win Percentage After Patch: {{forTemplate.winPercentageAfter}}</h3>
+      <h3 style="text-align:center">Win Percentage Before Patch: {{forTemplate.winPercentageBefore}}%</h3>
+      <h3 style="text-align:center">Win Percentage After Patch: {{forTemplate.winPercentageAfter}}%</h3>
       <h3 style="text-align:center">Win Percentage Change: {{forTemplate.winPercentageChange}}</h3>
       
       <img width="100%" style="padding:20px" class="champPic" src="http://ddragon.leagueoflegends.com/cdn/img/champion/splash/{{forTemplate.imgURL}}_0.jpg" alt="Image not found" onError="this.onerror=null;this.src='https://na.merch.riotgames.com/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/p/l/plush_poro_1.png';">
